# attribute-dsl

./: .gitignore  .typos.toml  AGENTS.md  Cargo.toml  README.md  codecov.yaml  justfile
.github/workflows/: ci.yml
examples/: derive_field_attrs.rs
src/: chain.rs  infer.rs  lib.rs
