[package]
name = "attribute-dsl"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
description = "Shared parser helpers for Rust attribute DSLs built from paths and dot-call chains."
repository = "https://github.com/stayhydated/attribute-dsl"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { features = [ "extra-traits", "full", "parsing", "printing", "visit-mut" ], version = "2.0" }

[workspace.lints.rust]
unexpected_cfgs = { check-cfg = [ "cfg(coverage)" ], level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
derive_partial_eq_without_eq = "warn"
err_expect = "warn"
incompatible_msrv = "deny"
iter_on_single_items = "warn"
needless_bool = "warn"
redundant_clone = "warn"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
useless_conversion = "warn"
